--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -141,9 +141,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="parto" class="mb-4 subtitle fw-bolder">Amamentação
+                                        <h2 id="parto" class="mb-2 subtitle fw-bolder">Amamentação
                                         </h2>
-                                        <h5 class="mb-2 mt-4 h4"><b>O leite materno é o melhor alimento para o seu
+                                        <h5 class="mb-2 "><b>O leite materno é o melhor alimento para o seu
                                                 bebé!</b></h5>
                                         <p class="mb-2">
                                             A amamentação é um ato natural. A grande maioria das mulheres
@@ -221,7 +221,7 @@
                                         <li><a><i class="fa fa-check-circle"></i> Sinais de fome do bebé.</a></li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p>Nesta consulta necessitamos recolher informação médica
                                         sobre a
