--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -134,7 +134,7 @@
                                                             para
                                                             a Amamentação em grupo
                                                         </h2>
-                                                        <h5 class="mb-0 mt-2 h4"><b>A amamentação tem tanto de instinto
+                                                        <h5 class="mb-0 mt-2 "><b>A amamentação tem tanto de instinto
                                                                 como de aprendizagem!</b></h5>
                                                     </div>
                                                 </div>
