--- a/pages/curso-amamentacao-indiv.html
+++ b/pages/curso-amamentacao-indiv.html
@@ -143,7 +143,7 @@
                                                         <h2 id="title" class="subtitle fw-bold h3">Curso de Preparação
                                                             para a Amamentação Individual
                                                         </h2>
-                                                        <h5 class="mb-0 mt-2 h4"><b>A amamentação tem tanto de instinto
+                                                        <h5 class="mb-0 mt-2 "><b>A amamentação tem tanto de instinto
                                                                 como de aprendizagem!</b></h5>
                                                     </div>
                                                 </div>
