--- a/pages/curso.html
+++ b/pages/curso.html
@@ -204,7 +204,7 @@
                                                             para
                                                             a Amamentação em grupo
                                                         </h2>
-                                                        <h5 class="mb-0 mt-4 h4"><b>A amamentação tem tanto de instinto
+                                                        <h5 class="mb-0 mt-4 "><b>A amamentação tem tanto de instinto
                                                                 como de aprendizagem!</b></h5>
                                                     </div>
                                                 </div>
