--- a/pages/domicilio.html
+++ b/pages/domicilio.html
@@ -138,9 +138,9 @@
                             <!-- Título da Seção -->
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h3 id="Consulta" class="subtitle fw-bold mt-4 mb-4 ">
+                                    <h3 id="Consulta" class="subtitle fw-bold mb-2 ">
                                     </h3>
-                                    <h5 class="h4"><b id="subtitulo">Deve ter todo o apoio que precisa no
+                                    <h5 class="h5"><b id="subtitulo">Deve ter todo o apoio que precisa no
                                             conforto do seu
                                             lar
                                             durante a sua jornada de amamentação!</b></h5> <br>
@@ -165,7 +165,7 @@
                                         amamentação no conforto do seu lar, ajuda-a a tornar este desafio mais fácil.
                                     </p>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p>Esta sessão inclui a recolha da história clínica da
                                         paciente e do bebé e a observação da mamada, bem como o exame físico
@@ -231,7 +231,7 @@
 
                                 </p>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p>Esta consulta inclui a recolha da história clínica da
                                     paciente e do bebé, bem como o exame físico de ambos. Tenha sempre
