--- a/pages/gravidez.html
+++ b/pages/gravidez.html
@@ -121,9 +121,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold mt-4 mb-4 ">
+                                        <h2 id="title" class="subtitle fw-bold mb-2 ">
                                         </h2>
-                                        <h5 class=" h4"><b id="subtitulo">A diabetes gestacional afeta cada
+                                        <h5><b id="subtitulo">A diabetes gestacional afeta cada
                                                 vez
                                                 mais grávidas,
                                                 podendo
@@ -190,7 +190,7 @@
                                         <li> <a><i class="fa fa-check-circle"></i>Dúvidas ou questões.</a></li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p>Nesta consulta recolhemos informação clínica
                                         pertinente de cada paciente e executamos um exame físico detalhado do mesmo.
@@ -253,7 +253,7 @@
                                         <li> <a><i class="fa fa-check-circle"></i>Dúvidas ou questões.</a></li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p>Nesta consulta recolhemos informação clínica
                                         pertinente de cada paciente e executamos um exame físico detalhado do mesmo.
@@ -288,7 +288,7 @@
                                         Terapeuta Ocupacional de forma a orientar o seu curso de ação.
                                     </p>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p class="">Esta experiência multissensorial pode incluir a
                                         recolha da história clínica da paciente. Aconselhamos a que a paciente traga
@@ -348,7 +348,7 @@
                                             prevenção do Sd Morte súbita do latente.</a></li>
                                 </ul>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p>Esta consulta inclui a recolha da história clínica do
                                     paciente e exame físico do mesmo (se for pertinente). Pode ser
