--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -133,9 +133,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold mt-4">
+                                        <h2 id="title" class="subtitle fw-bold">
                                         </h2>
-                                        <h5 class="mb-0 mt-4 h4"><b id="subtitulo">Uma Pediatra não é uma médica como as
+                                        <h5 class="mb-0 mt-2"><b id="subtitulo">Uma Pediatra não é uma médica como as
                                                 outras, é
                                                 alguém que acompanha toda a família!</b></h5>
                                     </div>
@@ -268,7 +268,7 @@
                                                 tenham.</a></li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p> Esta consulta inclui a recolha da história clínica da
                                         gravidez atual e prévias (se procede). As grávidas/casais deverão
@@ -387,7 +387,7 @@
                                                 criança tenham.</a></li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p> Esta consulta inclui a recolha da história clínica do
                                         paciente e exame físico do mesmo, sempre com a presença e
@@ -483,7 +483,7 @@
                                     </p>
 
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p> Esta consulta inclui a recolha da história clínica do
                                         paciente e exame físico do mesmo, sempre com a presença e autorização dos pais.
@@ -592,7 +592,7 @@
                                                 prevenção do Sd Morte súbita do latente.</a></li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p> Esta consulta inclui a recolha da história clínica do
                                         paciente e exame físico do mesmo (se for pertinente). Pode ser
@@ -696,7 +696,7 @@
                                                 família.</a></li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p>Esta consulta inclui a recolha da história clínica do
                                         paciente.
