--- a/pages/terapia.html
+++ b/pages/terapia.html
@@ -136,9 +136,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold mt-4 mb-4">
+                                        <h2 id="title" class="subtitle fw-bold mb-2">
                                         </h2>
-                                        <h5 class=" h4"><b id="subtitulo">A terapia ocupacional ajuda a que o teu
+                                        <h5><b id="subtitulo">A terapia ocupacional ajuda a que o teu
                                                 dia-a-dia
                                                 corra melhor! </b><a class="h6 " id="mais" href="terapia.html#F"> clique
                                                 aqui para
@@ -188,7 +188,7 @@
                                     </li>
                                 </ul>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p>Esta consulta inclui a recolha da história clínica do
                                     paciente. Aconselhamos a que a criança traga roupas confortáveis.
@@ -297,7 +297,7 @@
                                             adaptação do ambiente habitual do paciente.</a></li>
                                 </ul>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p> Esta consulta inclui a recolha da história clínica do
                                     paciente. Aconselhamos a que o paciente traga roupas confortáveis.
@@ -384,7 +384,7 @@
 
                                 </p>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p> Esta experiência multissensorial pode incluir a recolha da
                                     história clínica da paciente e do seu bebé. Aconselhamos a que a paciente e bebé
@@ -477,7 +477,7 @@
                                     curso de ação.
                                 </p>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p>Esta consulta inclui a recolha da história clínica do
                                     paciente. Aconselhamos a que o paciente traga roupas confortáveis.
@@ -592,7 +592,7 @@
                                     seu curso de ação.
                                 </p>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p> Esta experiência multissensorial pode incluir a recolha da
                                     história clínica do paciente. Aconselhamos a que o paciente
