--- a/pages/vacinacao.html
+++ b/pages/vacinacao.html
@@ -156,7 +156,7 @@
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
-                                    <h5 class="mb-0 mt-4 h4"><b>A comodidade de ter um teste diagnóstico em sua casa é
+                                    <h5 class="mb-0 mt-4 "><b>A comodidade de ter um teste diagnóstico em sua casa é
                                             impagável.</b></h5>
                                     <!-- <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
                             nascimento através de hábitos salutares.
