--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -126,7 +126,7 @@
                                                     <h2 id="title" class="subtitle fw-bold h2">Workshops / Grupos de
                                                         apoio
                                                     </h2>
-                                                    <h5 class="mb-0 mt-2 h4"><b>Aproveite a oportunidade de aprofundar
+                                                    <h5 class="mb-0 mt-2 "><b>Aproveite a oportunidade de aprofundar
                                                             conhecimentos e de encontrar o apoio que necessita.</b></h5>
                                                 </div>
                                             </div>
