--- a/pages/worshop-Parentalidade.html
+++ b/pages/worshop-Parentalidade.html
@@ -155,7 +155,7 @@
                                                 <div class="section-title">
                                                     <h2 id="title" class="subtitle fw-bold h2">
                                                     </h2>
-                                                    <h5 class="mb-0 mt-2 h4"><b>1 - Birras: como sobreviver!</b>
+                                                    <h5 class="mb-0 mt-2 "><b>1 - Birras: como sobreviver!</b>
                                                     </h5>
                                                 </div>
                                             </div>
