--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -133,9 +133,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold mb-4 mt-4">
+                                        <h2 id="title" class="subtitle fw-bold mb-2">
                                         </h2>
-                                        <h5 class=" h4"><b id="subtitulo">Uma Pediatra não é uma médica como as
+                                        <h5 class=""><b id="subtitulo">Uma Pediatra não é uma médica como as
                                                 outras, é
                                                 alguém que acompanha toda a família!</b></h5>
                                     </div>
@@ -296,7 +296,7 @@
                                         </li>
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p> O Diagnóstico precoce dos diversos quadros neurodegenerativos (demências
                                         Parkinson, Alzheimer, Frontotemporal, etc)
@@ -412,7 +412,7 @@
                                     </ul>
 
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p> Não é possível prever qual o número mínimo de sessões necessárias pois cada caso
                                         é único e peculiar.
@@ -535,7 +535,7 @@
                                         dentro de outras perturbações.
                                     </p>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p> Não é possível prever qual o número mínimo de sessões necessárias pois cada caso
                                         é único e peculiar.
@@ -649,7 +649,7 @@
 
                                     </ul>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p>Não é possível prever qual o número mínimo de sessões necessárias pois cada caso
                                         é único e peculiar.
@@ -804,7 +804,7 @@
                                         doméstica, entre outros.
                                     </p>
                                     <div class="section-title mt-4">
-                                        <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                        <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                     </div>
                                     <p>Não é possível prever qual o número mínimo de sessões necessárias pois cada caso
                                         é único e peculiar.
