--- a/pages/curso-prep-indiv.html
+++ b/pages/curso-prep-indiv.html
@@ -144,7 +144,7 @@
                                                         <h2 id="title" class="subtitle fw-bold h3">Curso de Preparação
                                                             para o Parto Individual
                                                         </h2>
-                                                        <h5 class="mb-0 mt-4 h4"><b>O parto é um momento mágico mas que
+                                                        <h5 class="mb-0 mt-4 "><b>O parto é um momento mágico mas que
                                                                 pode envolver medos e dúvidas! A informação é a sua
                                                                 melhor arma para ter um parto
                                                                 humanizado e à sua medida!</b></h5>
