--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -133,8 +133,15 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold">
+                                        <h2 id="title" class="subtitle fw-bold mb-2 ">
                                         </h2>
+                                        <h5 class="mb-2 "><b>Um hábito nutricional saudável é um presente que
+                                                fica para a vida!</b></h5>
+                                        <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
+                                            nascimento através de hábitos salutares.
+                                            Cuidar da nossa alimentação é fundamental para vivermos uma vida longa e
+                                            saudável.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +156,7 @@
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
-                                    <h5 class="mb-2 h4"><b>Um hábito nutricional saudável é um presente que
+                                    <h5 class="mb-2 "><b>Um hábito nutricional saudável é um presente que
                                             fica para a vida!</b></h5>
                                     <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
                                         nascimento através de hábitos salutares.
@@ -303,7 +310,7 @@
 
                                 </ul>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p> Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado do
@@ -383,7 +390,7 @@
 
                                 </ul>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p>Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado do
@@ -460,7 +467,7 @@
 
                                 </ul>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p>Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado da
@@ -540,7 +547,7 @@
                                     </li>
                                 </ul>
                                 <div class="section-title mt-4">
-                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
                                 </div>
                                 <p> Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado da
