--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -143,12 +143,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="mb-2 subtitle fw-bolder">Apresentação
+                                        <h2 class=" mb-2 subtitle fw-bolder">Apresentação
                                         </h2>
-                                        <br>
                                         <p class="mb-4" id="paragrafo">
                                         </p>
-                                        <h5 class="mb-4 mt-4 h4 text-center" id="frase"></h5>
+                                        <h5 class="mt-4 h4 text-center" id="frase"></h5>
                                     </div>
                                 </div>
                             </div>
