--- a/pages/teste.html
+++ b/pages/teste.html
@@ -128,9 +128,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold mb-4 mt-4">
+                                        <h2 id="title" class="subtitle fw-bold mb-2">
                                         </h2>
-                                        <h5 class=" h4"><b id="subtitulo">A comodidade de ter um teste
+                                        <h5><b id="subtitulo">A comodidade de ter um teste
                                                 diagnóstico em sua casa
                                                 é
                                                 impagável.</b></h5>
@@ -154,7 +154,7 @@
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
-                                    <h5 class="mb-0 mt-4 h4"><b>A comodidade de ter um teste diagnóstico em sua casa é
+                                    <h5 class="mb-0 mt-4 "><b>A comodidade de ter um teste diagnóstico em sua casa é
                                             impagável.</b></h5>
                                     <!-- <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
                             nascimento através de hábitos salutares.
