--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -155,7 +155,7 @@
                                                 <div class="section-title">
                                                     <h2 id="title" class="subtitle fw-bold h2">
                                                     </h2>
-                                                    <h5 class="mb-0 mt-2 h4"><b>1- Amamentação durante o sono do
+                                                    <h5 class="mb-0 mt-2 "><b>1- Amamentação durante o sono do
                                                             bebé.</b>
                                                     </h5>
                                                 </div>
@@ -218,7 +218,7 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="section-title">
-                                                    <h5 class="mb-0 mt-2 h4"><b>2- Amamentação sem dor: realidade ou
+                                                    <h5 class="mb-0 mt-2 "><b>2- Amamentação sem dor: realidade ou
                                                             ficção?</b>
                                                     </h5>
                                                 </div>
