--- a/pages/workshop-bebe.html
+++ b/pages/workshop-bebe.html
@@ -155,7 +155,7 @@
                                                 <div class="section-title">
                                                     <h2 id="title" class="subtitle fw-bold h2">
                                                     </h2>
-                                                    <h5 class="mb-0 mt-2 h4"><b>1- Autonomia do bebé e da criança.</b>
+                                                    <h5 class="mb-0 mt-2 "><b>1- Autonomia do bebé e da criança.</b>
                                                     </h5>
                                                 </div>
                                             </div>
@@ -202,7 +202,7 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="section-title">
-                                                    <h5 class="mb-0 mt-2 h4"><b>2- Exterogestação: os primeiros 3 meses
+                                                    <h5 class="mb-0 mt-2 "><b>2- Exterogestação: os primeiros 3 meses
                                                             do seu bebé.</b>
                                                     </h5>
                                                 </div>
@@ -254,7 +254,7 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="section-title">
-                                                    <h5 class="mb-0 mt-2 h4"><b>3- Marcos do desenvolvimento infantil
+                                                    <h5 class="mb-0 mt-2 "><b>3- Marcos do desenvolvimento infantil
                                                             nos primeiros 12 meses de vida.</b>
                                                     </h5>
                                                 </div>
@@ -303,7 +303,7 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="section-title">
-                                                    <h5 class="mb-0 mt-2 h4"><b>4 - Sono seguro do bebé.</b>
+                                                    <h5 class="mb-0 mt-2 "><b>4 - Sono seguro do bebé.</b>
                                                     </h5>
                                                 </div>
                                             </div>
