--- a/pages/workshop-primeiros-socorros.html
+++ b/pages/workshop-primeiros-socorros.html
@@ -156,7 +156,7 @@
                                                 <div class="section-title">
                                                     <h2 id="title" class="subtitle fw-bold h2">
                                                     </h2>
-                                                    <h5 class="mb-0 mt-2 h4"><b>1 - Engasgamento no primeiros 12 meses
+                                                    <h5 class="mb-0 mt-2 "><b>1 - Engasgamento no primeiros 12 meses
                                                             de vida.</b>
                                                     </h5>
                                                 </div>
