--- a/pages/header.html
+++ b/pages/header.html
@@ -429,8 +429,7 @@
                                 <li><a href="teste.html#A">Teste do pezinho</a></li>
                             </ul>
                         </li><!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="../additional-services.html">Workshops<span
-                                    class="dropdown-arrow"></span></a>
+                        <li><a class="arrow" href="workshop.html">Workshops<span class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="workshop.html">Workshops/Grupos de Apoio</a></li>
                                 <li><a href="workshop-amament.html">Amamentação</a></li>
