--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -938,7 +938,7 @@
             EDiv.style.display = 'none';
             showe.style.display = 'block';
             hiden.style.display = 'none';
-            doutora.textContent = "Dra Inês Claudino";
+            doutora.textContent = "Dra. Joana Costa";
             title.textContent = "Consulta de Psicologia do Adulto";
             subtitulo.textContent = "Vamos enfrentar juntos os desafios da vida, um pensamento de cada vez!";
             img.src = "../img/blog/details/consultas em criancas.jpg";
