aumento dos menus

--- a/pages/header.html
+++ b/pages/header.html
@@ -359,15 +359,44 @@
                         </li>
 
                         <!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="vacinacao.html">Vacinação<span class="dropdown-arrow"></span></a>
-                            <ul class="dropdown">
-                                <li><a href="vacinacao.html#A">Adulto</a></li>
-                                <li><a href="vacinacao.html#B">Gravidez</a></li>
-                                <li><a href="vacinacao.html#D">Infantil</a></li>
-                                <li><a href="vacinacao.html#E">Viajante</a></li>
-                            </ul>
+                        <!-- vacinacao  -->
+                        <li>
+                            <a class="arrow">Vacinação <span class="dropdown-arrow"></span></a>
+                            <div class="dt-mega-menu-wrap justify-content-center d-flex">
+                                <ul class="dropdown menu grav vacina">
+                                    <li>
+                                        <span><img src="../img/icons/Vacinação.png" alt="">Vacinação para adultos</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="vacinacao.html#A">Vacinação para adultos</a></li>
+                                        </ul>
+                                        <br>
+                                        <span><img src="../img/icons/pediatria-alt.png" alt="">Vacinação Infantil</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="vacinacao.html#C">Consulta</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+
+                                    <li>
+                                        <span><img src="../img/icons/Gravidez.png" alt="">Vacinação na gravidez</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="vacinacao.html#B">vacinação na gravidez e
+                                                    aleitamento materno</a></li>
+
+                                        </ul>
+                                        <br>
+                                        <span><img src="../img/icons/viajante.png" alt="">Vacinação para
+                                            Viajantes</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="vacinacao.html#E">Consulta</a></li>
+                                        </ul>
+
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
-                        <!-- Consultas -->
+                        <!-- fim da vacinacao  -->
+                        <!-- Gravidez -->
                         <li>
                             <a class="arrow">Gravidez <span class="dropdown-arrow"></span></a>
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
@@ -420,15 +449,40 @@
                             </div>
                         </li>
 
+                        <!-- Dimiciliario  -->
+                        <li>
+                            <a class="arrow">Apoio ao domicílio <span class="dropdown-arrow"></span></a>
+                            <div class="dt-mega-menu-wrap justify-content-center d-flex">
+                                <ul class="dropdown menu grav vacina">
+                                    <li>
+                                        <span><img src="../img/icons/amamentacao.png" alt="">Amamentação</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="domicilio.html">Apoio ao domicílio na Amamentação</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <span><img src="../img/icons/ENFERM.png" alt="">Enfermagem</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="domicilio.html#conseferm">Apoio ao domicílio na
+                                                    enfermagem</a></li>
+                                        </ul>
+                                    </li>
+
+                                    <li>
+                                        <span><img src="../img/icons/pediatria-alt.png" alt="">Teste do pezinho</span>
+                                        <ul class="dropdown-sec">
+                                            <li><a href="teste.html#A">Teste do pezinho ou rastreio neonatal</a>
+                                            </li>
+
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <!-- fim da Dimiciliario  -->
+
                         <!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="domicilio.html">Apoio ao domicílio <span
-                                    class="dropdown-arrow"></span></a>
-                            <ul class="dropdown">
-                                <li><a href="domicilio.html">Amamentação</a></li>
-                                <li><a href="domicilio.html#conseferm">Enfermagem</a></li>
-                                <li><a href="teste.html#A">Teste do pezinho</a></li>
-                            </ul>
-                        </li><!-- Serviços Adicionais -->
                         <li><a class="arrow" href="workshop.html">Workshops<span class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="workshop.html">Workshops/Grupos de Apoio</a></li>
