--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -33,7 +33,7 @@
                 background-size: cover;
                 background-position: left;
                 background-repeat: no-repeat;
-                background-position-x: -86px;
+                background-position-x: right;
             }
 
             .services__details__pic img {
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="services__details__pic">
                 <div class="services__details__pic">
-                    <img id="img" src="../img/blog/details/blog-hero6.jpg" alt="">
+                    <div id="img" class="img"></div>
                     <div id="show" class="services__details__content">
                         <div class="d-flex w-100 align-items-end">
                             <div class="mr-3">
@@ -504,7 +504,7 @@
             suturaDiv.style.display = 'none';
             CirurgiaDiv.style.display = 'none';
             subtitulo.textContent = "Cuidar dos pacientes com amor é o que distingue a nossa equipa de Enfermagem!";
-            img.src = "../img/blog/details/Consulta-de-Enfermagem.jpg"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/Consulta-de-Enfermagem.jpg')"; // Atualiza o texto para "Cirurgia"
             consultaText.textContent = "Consulta de Enfermagem";
             anelBtn.classList.add("active");
             CirurgiaBtn.classList.remove("active");
@@ -521,7 +521,7 @@
             CirurgiaDiv.style.display = 'none';
             subtitulo.textContent = "Quando precisar de uma mudança de penso, pode fazê-lo n’A Clínica.";
             consultaText.textContent = "Pensos";
-            img.src = "../img/blog/details/Consulta-pensos.jpg"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/Consulta-pensos.jpg')"; // Atualiza o texto para "Cirurgia"
             texto.textContent = "O cuidado das lesões da pele pode necessitar as mãos de um profissional. A nossa equipa de Enfermagem tem a experiência para fazê-lo da forma mais adequada.";
             suturaBtn.classList.add("active");
             anelBtn.classList.remove("active");
