--- a/header.html
+++ b/header.html
@@ -132,9 +132,9 @@
                                     Adolescente e
                                     criança</a>
                             </li>
-                            <li><a class="dropdown-item underline" href="pages/Psicologia.html#D">Psicologia do
+                            <li><a class="dropdown-item underline" href="pages/Psicologia.html#C">Psicologia do
                                     Adulto</a></li>
-                            <li><a class="dropdown-item underline" href="pages/Psicologia.html#E">Psicologia Materna</a>
+                            <li><a class="dropdown-item underline" href="pages/Psicologia.html#D">Psicologia Materna</a>
                             </li>
                             <li><a class="dropdown-item underline" href="pages/Psicologia.html#E">Terapia de Casal e
                                     Familiar</a></li>
