--- a/pages/header.html
+++ b/pages/header.html
@@ -349,8 +349,8 @@
                                             <li><a href="Psicologia.html#B">Psicologia do Adolescente e
                                                     criança</a>
                                             </li>
-                                            <li><a href="Psicologia.html#D">Psicologia do Adulto</a></li>
-                                            <li><a href="Psicologia.html#E">Psicologia Materna</a></li>
+                                            <li><a href="Psicologia.html#C">Psicologia do Adulto</a></li>
+                                            <li><a href="Psicologia.html#D">Psicologia Materna</a></li>
                                             <li><a href="Psicologia.html#E">Terapia de Casal e Familiar</a></li>
                                         </ul>
                                     </li>
