--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -108,15 +108,16 @@
                             <div>
                                 <h4 class="text-white"><a id="doutora" href="team-sing.html#D">Dra Patrícia Pérez</a>
                                 </h4>
-                                <h5>Médica Geral</h5>
+                                <h5>Psicóloga Clínica</h5>
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 30min | <i
+                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 45 a 60min | <i
                                     class="fa fa-user"></i>
-                                presencial
+                                presencial |
+                                <i class="fa fa-desktop"></i> Online
                             </span>
-                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i id="mn"
+                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 45 a 60min | <i id="mn"
                                     class="fa fa-user"> presencial</i>
                                 |
                                 <i class="fa fa-desktop"></i> Online
