--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -106,7 +106,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h4 class="text-white"><a id="doutora" href="team-sing.html#D">Dra Patrícia Pérez</a>
+                                <h4 class="text-white"><a id="doutora" href="team-sing.html#D">Dra Joana Costa</a>
                                 </h4>
                                 <h5>Psicóloga Clínica</h5>
                             </div>
