--- a/header.html
+++ b/header.html
@@ -384,7 +384,7 @@
                                         <br>
                                         <span><img src="img/icons/pediatria-alt.png" alt="">Vacinação Infantil</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="pages/vacinacao.html#C">Consulta</a>
+                                            <li><a href="pages/vacinacao.html#D">Consulta</a>
                                             </li>
                                         </ul>
                                     </li>
