--- a/pages/header.html
+++ b/pages/header.html
@@ -372,7 +372,7 @@
                                         <br>
                                         <span><img src="../img/icons/pediatria-alt.png" alt="">Vacinação Infantil</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="vacinacao.html#C">Consulta</a>
+                                            <li><a href="vacinacao.html#D">Consulta</a>
                                             </li>
                                         </ul>
                                     </li>
