pagina da vacinacao

--- a/consultas.html
+++ b/consultas.html
@@ -366,6 +366,33 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-6 col-md-6">
+                    <div class="services__item d-flex align-items-center border shadow-sm">
+                        <div class="services__item__icon">
+                            <img src="img/icons/Pscologa-white.png" style="width: 80px;">
+                        </div>
+                        <div class="services__item__text">
+                            <h5>Psicologia</h5>
+                            <ul>
+                                <li><a href="pages/Psicologia.html#A"><i class="fa fa-check-circle"></i>
+                                        Avaliação Neuropsicológica</a>
+                                </li>
+                                <li><a href="pages/Psicologia.html#B"><i class="fa fa-check-circle"></i> Psicologia do
+                                        Adolescente e
+                                        criança</a></li>
+                                <li><a href="pages/Psicologia.html#D"><i class="fa fa-check-circle"></i> Psicologia do
+                                        Adulto</a></li>
+                                <li><a href="pages/Psicologia.html#E"><i class="fa fa-check-circle"></i> Psicologia
+                                        Materna</a>
+                                </li>
+                                <li><a href="pages/Psicologia.html#AE"><i class="fa fa-check-circle"></i> Terapia de
+                                        Casal e
+                                        Familiar</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
