--- a/pages/header.html
+++ b/pages/header.html
@@ -361,7 +361,7 @@
                         <!-- Serviços Adicionais -->
                         <!-- vacinacao  -->
                         <li>
-                            <a class="arrow">Vacinação <span class="dropdown-arrow"></span></a>
+                            <a class="arrow" href="vacina.html">Vacinação <span class="dropdown-arrow"></span></a>
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu grav vacina">
                                     <li>
