--- a/pages/header.html
+++ b/pages/header.html
@@ -398,7 +398,7 @@
                         <!-- fim da vacinacao  -->
                         <!-- Gravidez -->
                         <li>
-                            <a class="arrow">Gravidez <span class="dropdown-arrow"></span></a>
+                            <a class="arrow" href="gravida.html">Gravidez <span class="dropdown-arrow"></span></a>
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu grav">
                                     <li>
