--- a/header.html
+++ b/header.html
@@ -411,7 +411,7 @@
 
                         <!-- Consultas -->
                         <li>
-                            <a class="arrow">Gravidez <span class="dropdown-arrow"></span></a>
+                            <a class="arrow" href="pages/gravida.html">Gravidez <span class="dropdown-arrow"></span></a>
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu grav">
                                     <li>
