--- a/header.html
+++ b/header.html
@@ -462,7 +462,8 @@
                         </li>
                         <!-- Dimiciliario  -->
                         <li>
-                            <a class="arrow">Apoio ao domicílio <span class="dropdown-arrow"></span></a>
+                            <a class="arrow" href="pages/apoio.html">Apoio ao domicílio <span
+                                    class="dropdown-arrow"></span></a>
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu grav vacina">
                                     <li>
