--- a/pages/header.html
+++ b/pages/header.html
@@ -451,7 +451,8 @@
 
                         <!-- Dimiciliario  -->
                         <li>
-                            <a class="arrow">Apoio ao domicílio <span class="dropdown-arrow"></span></a>
+                            <a class="arrow" href="apoio.html">Apoio ao domicílio <span
+                                    class="dropdown-arrow"></span></a>
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu grav vacina">
                                     <li>
