--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -911,7 +911,7 @@
             showe.style.display = 'none';
             title.textContent = "Avaliação Neuropsicológica";
             subtitulo.textContent = "";
-            img.src = "../img/blog/details/diabetes.jpg";
+            img.src = "../img/blog/details/terapia_adultos.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
@@ -923,7 +923,7 @@
             DDiv.style.display = 'none';
             EDiv.style.display = 'none';
             showe.style.display = 'none';
-            doutora.textContent = "Dra Joana Costa";
+            doutora.textContent = "Dra. Joana Costa";
             title.textContent = "Consulta de Psicologia do Adolescente e criança";
             subtitulo.textContent = "Vamos enfrentar juntos os desafios da vida, um pensamento de cada vez!";
             img.src = "../img/blog/details/consulta_de_psicologia_do_adolescente_e_da_infancia.jpg";
