--- a/pages/vacina.html
+++ b/pages/vacina.html
@@ -126,7 +126,7 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-9">
         <div class="container">
-            <div class="blog__details__hero set-bg" data-setbg="../img/blog/details/VACINA-SING.jpg">
+            <div class="blog__details__hero set-bg" data-setbg="../img/blog/details/VACINA-SING.JPG">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
                         <div class="blog__hero__text">
