--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -942,7 +942,7 @@
             doutora.textContent = "Dra. Joana Costa";
             title.textContent = "Consulta de Psicologia do Adulto";
             subtitulo.textContent = "Vamos enfrentar juntos os desafios da vida, um pensamento de cada vez!";
-            img.src = "../img/blog/details/consultas em criancas.jpg";
+            img.src = "../img/blog/details/terapia_adultos.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
