--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -956,7 +956,7 @@
             showe.style.display = 'none';
             title.textContent = "Consulta de Psicologia Materna";
             subtitulo.textContent = "Vamos  enfrentar juntos os desafios da vida, um pensamento de cada vez!";
-            img.src = "../img/blog/details/sono.jpg";
+            img.src = "../img/blog/details/consulta_psicologia_materna.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
